--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Vite + React</title>
     <style>
       body {
-        background-color: #aaf0aa; /* Verde claro */
         margin: 0; /* Remove margens padrão do body */
+        background-color: rgb(172, 161, 161);
+        background-image: url('../image/aoc.png'); /* Caminho para a sua imagem */
+        background-size: cover; /* Ajusta o tamanho da imagem para cobrir todo o fundo */
+        background-position: center; /* Centraliza a imagem no fundo */
+        background-repeat: no-repeat; /* Impede a repetição da imagem */
       }
     </style>
   </head>
@@ -17,3 +21,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
